modules/gdscript/tests/scripts/analyzer/errors/leading_number_separator.gd
func test():
	# Number separators may not be placed at the beginning of a number.
	var __ = _123
